--- a/P4/P4-natural-language-assignment/P1 - Indexació-assignment.ipynb
+++ b/P4/P4-natural-language-assignment/P1 - Indexació-assignment.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e07b1632",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3328837e",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b991a04b",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "0d83bf01",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "fd095120",
    "metadata": {},
    "outputs": [
@@ -290,8 +290,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'The Lady of Blossholme 3813.txt', \"Allan's Wife 2727.txt\", 'Doctor Therne 5764.txt', \"Mr. Meeson's Will 11913.txt\", 'Stella Fregelius 6051.txt', 'Stories by English Authors: Africa (Selected by Scribners) 1980.txt', 'Swallow: a tale of the great trek 4074.txt', 'Red Eve 3094.txt', 'Dawn 10892.txt', 'Pearl-Maiden 5175.txt', 'Black Heart and White Heart 2842.txt', 'Colonel Quaritch, V.C. A Tale of Country Life 11882.txt', 'The Mahatma and the Hare 2764.txt', 'Marie An Episode in The Life of the late Allan Quatermain 1690.txt', 'The Ghost Kings 8184.txt', 'Allan Quatermain 711.txt', \"Wisdom's Daughter (1923) 0200181.txt\", 'Love Eternal 3709.txt', 'Ayesha, the Return of She 5228.txt', 'The Wizard 2893.txt', 'Queen of the Dawn (1925) 0200381.txt', \"Maiwa's Revenge 2713.txt\", \"The Wanderer's Necklace 3097.txt\", 'When the World Shook; being an account of the great adventure of Bastin, Bickley and Arbuthnot 1368.txt', 'A Winter Pilgrimage (1901) 0600121.txt', \"Montezuma's Daughter 1848.txt\", 'She 3155.txt', 'Nada the Lily 1207.txt', 'The Virgin of the Sun 3153.txt', 'A Yellow God: an Idol of Africa 2857.txt', 'Cleopatra 2769.txt', 'She and Allan 5745.txt', 'The Ancient Allan 5746.txt', \"Queen Sheba's Ring 2602.txt\", 'The People of the Mist 6769.txt', 'Allan and the Holy Flower 5174.txt', 'Jess 5898.txt', 'Morning Star 2722.txt', 'Cetywayo and his White Neighbours Remarks on Recent Events in Zululand, Natal, and the Transvaal 8667.txt', 'Allan and the Ice Gods (1927) 0200201.txt', 'Finished 1724.txt', 'Moon of Israel 2856.txt', 'Heu-Heu (1924) 0200191.txt', 'Beatrice 3096.txt', 'Child of Storm 1711.txt', 'Regeneration 13434.txt', 'Smith and the Pharaohs, and other Tales 6073.txt', 'Lysbeth, a Tale of the Dutch 5754.txt', 'Fair Margaret 9780.txt', 'The Tale of Three Lions 2729.txt', 'Eric Brighteyes 2721.txt', 'The Ivory Child 2841.txt', \"The Witch's Head (1884) 0500791.txt\", 'Long Odds 1918.txt', 'The Brethren 2762.txt', 'Elissa 2855.txt', \"King Solomon's Mines 2166.txt\", \"The World's Desire 2763.txt\", 'Benita, an African romance 2761.txt'}\n",
-      "{'The Lady of Blossholme 3813.txt', \"Allan's Wife 2727.txt\", 'Doctor Therne 5764.txt', \"Mr. Meeson's Will 11913.txt\", 'Stella Fregelius 6051.txt', 'Stories by English Authors: Africa (Selected by Scribners) 1980.txt', 'Swallow: a tale of the great trek 4074.txt', 'Red Eve 3094.txt', 'Dawn 10892.txt', 'Pearl-Maiden 5175.txt', 'Black Heart and White Heart 2842.txt', 'Colonel Quaritch, V.C. A Tale of Country Life 11882.txt', 'The Mahatma and the Hare 2764.txt', 'Marie An Episode in The Life of the late Allan Quatermain 1690.txt', 'The Ghost Kings 8184.txt', 'Allan Quatermain 711.txt', \"Wisdom's Daughter (1923) 0200181.txt\", 'Love Eternal 3709.txt', 'Ayesha, the Return of She 5228.txt', 'The Wizard 2893.txt', \"Hunter Quatermain's Story 2728.txt\", 'Queen of the Dawn (1925) 0200381.txt', \"Maiwa's Revenge 2713.txt\", \"The Wanderer's Necklace 3097.txt\", 'When the World Shook; being an account of the great adventure of Bastin, Bickley and Arbuthnot 1368.txt', 'A Winter Pilgrimage (1901) 0600121.txt', \"Montezuma's Daughter 1848.txt\", 'She 3155.txt', 'Nada the Lily 1207.txt', 'The Virgin of the Sun 3153.txt', 'A Yellow God: an Idol of Africa 2857.txt', 'Cleopatra 2769.txt', 'She and Allan 5745.txt', 'The Ancient Allan 5746.txt', \"Queen Sheba's Ring 2602.txt\", 'The People of the Mist 6769.txt', 'Allan and the Holy Flower 5174.txt', 'Jess 5898.txt', 'Morning Star 2722.txt', 'Cetywayo and his White Neighbours Remarks on Recent Events in Zululand, Natal, and the Transvaal 8667.txt', 'Allan and the Ice Gods (1927) 0200201.txt', 'Finished 1724.txt', 'Moon of Israel 2856.txt', 'Heu-Heu (1924) 0200191.txt', 'Beatrice 3096.txt', 'Child of Storm 1711.txt', 'Regeneration 13434.txt', 'Smith and the Pharaohs, and other Tales 6073.txt', 'Lysbeth, a Tale of the Dutch 5754.txt', 'Fair Margaret 9780.txt', 'The Tale of Three Lions 2729.txt', 'Eric Brighteyes 2721.txt', 'The Ivory Child 2841.txt', \"The Witch's Head (1884) 0500791.txt\", 'The Brethren 2762.txt', 'Elissa 2855.txt', \"King Solomon's Mines 2166.txt\", \"The World's Desire 2763.txt\", 'Benita, an African romance 2761.txt'}\n",
+      "{'Doctor Therne 5764.txt', \"The World's Desire 2763.txt\", 'Morning Star 2722.txt', 'The Ivory Child 2841.txt', \"King Solomon's Mines 2166.txt\", 'Marie An Episode in The Life of the late Allan Quatermain 1690.txt', 'Benita, an African romance 2761.txt', 'The People of the Mist 6769.txt', 'Colonel Quaritch, V.C. A Tale of Country Life 11882.txt', 'A Yellow God: an Idol of Africa 2857.txt', 'Eric Brighteyes 2721.txt', \"Maiwa's Revenge 2713.txt\", \"Montezuma's Daughter 1848.txt\", 'When the World Shook; being an account of the great adventure of Bastin, Bickley and Arbuthnot 1368.txt', 'Nada the Lily 1207.txt', 'Finished 1724.txt', 'Pearl-Maiden 5175.txt', \"Wisdom's Daughter (1923) 0200181.txt\", 'The Wizard 2893.txt', 'Allan and the Ice Gods (1927) 0200201.txt', 'The Mahatma and the Hare 2764.txt', 'The Virgin of the Sun 3153.txt', 'Queen of the Dawn (1925) 0200381.txt', \"Queen Sheba's Ring 2602.txt\", 'Beatrice 3096.txt', 'The Ancient Allan 5746.txt', 'Child of Storm 1711.txt', 'Fair Margaret 9780.txt', 'Stories by English Authors: Africa (Selected by Scribners) 1980.txt', 'The Ghost Kings 8184.txt', \"The Witch's Head (1884) 0500791.txt\", 'Regeneration 13434.txt', \"Allan's Wife 2727.txt\", \"Mr. Meeson's Will 11913.txt\", 'The Brethren 2762.txt', 'Cleopatra 2769.txt', 'Love Eternal 3709.txt', 'Stella Fregelius 6051.txt', 'The Tale of Three Lions 2729.txt', 'Allan and the Holy Flower 5174.txt', 'Allan Quatermain 711.txt', 'Lysbeth, a Tale of the Dutch 5754.txt', 'She 3155.txt', 'Moon of Israel 2856.txt', 'Long Odds 1918.txt', 'She and Allan 5745.txt', 'A Winter Pilgrimage (1901) 0600121.txt', 'The Lady of Blossholme 3813.txt', \"The Wanderer's Necklace 3097.txt\", 'Red Eve 3094.txt', 'Jess 5898.txt', 'Ayesha, the Return of She 5228.txt', 'Swallow: a tale of the great trek 4074.txt', 'Dawn 10892.txt', 'Black Heart and White Heart 2842.txt', 'Smith and the Pharaohs, and other Tales 6073.txt', 'Elissa 2855.txt', 'Cetywayo and his White Neighbours Remarks on Recent Events in Zululand, Natal, and the Transvaal 8667.txt', 'Heu-Heu (1924) 0200191.txt'}\n",
+      "{'Doctor Therne 5764.txt', \"The World's Desire 2763.txt\", 'Morning Star 2722.txt', 'The Ivory Child 2841.txt', \"King Solomon's Mines 2166.txt\", 'Marie An Episode in The Life of the late Allan Quatermain 1690.txt', 'Benita, an African romance 2761.txt', 'The People of the Mist 6769.txt', \"Hunter Quatermain's Story 2728.txt\", 'Colonel Quaritch, V.C. A Tale of Country Life 11882.txt', 'Eric Brighteyes 2721.txt', \"Maiwa's Revenge 2713.txt\", \"Montezuma's Daughter 1848.txt\", 'When the World Shook; being an account of the great adventure of Bastin, Bickley and Arbuthnot 1368.txt', 'Nada the Lily 1207.txt', 'Finished 1724.txt', 'Pearl-Maiden 5175.txt', 'A Yellow God: an Idol of Africa 2857.txt', \"Wisdom's Daughter (1923) 0200181.txt\", 'The Wizard 2893.txt', 'Allan and the Ice Gods (1927) 0200201.txt', 'The Mahatma and the Hare 2764.txt', 'The Virgin of the Sun 3153.txt', 'Queen of the Dawn (1925) 0200381.txt', \"Queen Sheba's Ring 2602.txt\", 'Beatrice 3096.txt', 'The Ancient Allan 5746.txt', 'Child of Storm 1711.txt', 'Fair Margaret 9780.txt', 'Stories by English Authors: Africa (Selected by Scribners) 1980.txt', 'The Ghost Kings 8184.txt', \"The Witch's Head (1884) 0500791.txt\", 'Regeneration 13434.txt', \"Allan's Wife 2727.txt\", \"Mr. Meeson's Will 11913.txt\", 'The Brethren 2762.txt', 'Cleopatra 2769.txt', 'Love Eternal 3709.txt', 'Stella Fregelius 6051.txt', 'The Tale of Three Lions 2729.txt', 'Allan and the Holy Flower 5174.txt', 'Allan Quatermain 711.txt', 'Lysbeth, a Tale of the Dutch 5754.txt', 'She 3155.txt', 'Moon of Israel 2856.txt', 'She and Allan 5745.txt', 'A Winter Pilgrimage (1901) 0600121.txt', 'The Lady of Blossholme 3813.txt', \"The Wanderer's Necklace 3097.txt\", 'Red Eve 3094.txt', 'Jess 5898.txt', 'Ayesha, the Return of She 5228.txt', 'Swallow: a tale of the great trek 4074.txt', 'Dawn 10892.txt', 'Black Heart and White Heart 2842.txt', 'Smith and the Pharaohs, and other Tales 6073.txt', 'Elissa 2855.txt', 'Cetywayo and his White Neighbours Remarks on Recent Events in Zululand, Natal, and the Transvaal 8667.txt', 'Heu-Heu (1924) 0200191.txt'}\n",
       "59\n"
      ]
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "e8efdedd",
    "metadata": {},
    "outputs": [],
@@ -334,16 +334,16 @@
     "    if len(terms) == 0:\n",
     "        return set()\n",
     "    \n",
-    "    result = inverse_index.tdf[terms[0]]\n",
+    "    result = inverse_index.tdf[terms[0]] #Iniciem amb el primer terme de la cerca\n",
     "    \n",
-    "    for term in terms[1:]:\n",
+    "    for term in terms[1:]: #Intersectem els conjunts que contenen cada terme\n",
     "        result = result.intersection(inverse_index.tdf[term])\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "88a94aba",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ayesha, the Return of She 5228.txt', 'The Ivory Child 2841.txt', 'When the World Shook; being an account of the great adventure of Bastin, Bickley and Arbuthnot 1368.txt', 'Finished 1724.txt', 'Allan Quatermain 711.txt'}\n"
+      "{'The Ivory Child 2841.txt', 'Ayesha, the Return of She 5228.txt', 'When the World Shook; being an account of the great adventure of Bastin, Bickley and Arbuthnot 1368.txt', 'Finished 1724.txt', 'Allan Quatermain 711.txt'}\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "3c0a11f7",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
     "    result = set()\n",
     "    \n",
     "    for term in terms:\n",
-    "        result = set.union(result, inverse_index.tdf[term])\n",
+    "        result = set.union(result, inverse_index.tdf[term]) #Fem la unio de tots els docs que tinguin cada terme\n",
     "    return result"
    ]
   },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "91659ee3",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "cf35145a",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "c66cdde7",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "1f88af83",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "id": "c5249ac8",
    "metadata": {},
    "outputs": [],
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "a12698ff",
    "metadata": {},
    "outputs": [],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "id": "4815d111",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "id": "05687c61",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'The Lady of Blossholme 3813.txt', \"Allan's Wife 2727.txt\", 'Doctor Therne 5764.txt', \"Mr. Meeson's Will 11913.txt\", 'Stella Fregelius 6051.txt', 'Stories by English Authors: Africa (Selected by Scribners) 1980.txt', 'Swallow: a tale of the great trek 4074.txt', 'Red Eve 3094.txt', 'Dawn 10892.txt', 'Pearl-Maiden 5175.txt', 'Colonel Quaritch, V.C. A Tale of Country Life 11882.txt', 'The Mahatma and the Hare 2764.txt', 'Marie An Episode in The Life of the late Allan Quatermain 1690.txt', 'The Ghost Kings 8184.txt', 'Allan Quatermain 711.txt', \"Wisdom's Daughter (1923) 0200181.txt\", 'Love Eternal 3709.txt', 'Ayesha, the Return of She 5228.txt', 'The Wizard 2893.txt', \"Hunter Quatermain's Story 2728.txt\", 'Queen of the Dawn (1925) 0200381.txt', \"Maiwa's Revenge 2713.txt\", \"The Wanderer's Necklace 3097.txt\", 'When the World Shook; being an account of the great adventure of Bastin, Bickley and Arbuthnot 1368.txt', 'A Winter Pilgrimage (1901) 0600121.txt', \"Montezuma's Daughter 1848.txt\", 'She 3155.txt', 'Nada the Lily 1207.txt', 'The Virgin of the Sun 3153.txt', 'A Yellow God: an Idol of Africa 2857.txt', 'Cleopatra 2769.txt', 'She and Allan 5745.txt', 'The Ancient Allan 5746.txt', \"Queen Sheba's Ring 2602.txt\", 'The People of the Mist 6769.txt', 'Allan and the Holy Flower 5174.txt', 'Jess 5898.txt', 'Morning Star 2722.txt', 'Cetywayo and his White Neighbours Remarks on Recent Events in Zululand, Natal, and the Transvaal 8667.txt', 'Allan and the Ice Gods (1927) 0200201.txt', 'Finished 1724.txt', 'Moon of Israel 2856.txt', 'Heu-Heu (1924) 0200191.txt', 'Beatrice 3096.txt', 'Child of Storm 1711.txt', 'Regeneration 13434.txt', 'Smith and the Pharaohs, and other Tales 6073.txt', 'Lysbeth, a Tale of the Dutch 5754.txt', 'Fair Margaret 9780.txt', 'The Tale of Three Lions 2729.txt', 'Eric Brighteyes 2721.txt', 'The Ivory Child 2841.txt', \"The Witch's Head (1884) 0500791.txt\", 'The Brethren 2762.txt', 'Elissa 2855.txt', \"King Solomon's Mines 2166.txt\", \"The World's Desire 2763.txt\", 'Benita, an African romance 2761.txt'}\n"
+      "{'Doctor Therne 5764.txt', \"The World's Desire 2763.txt\", 'Morning Star 2722.txt', 'The Ivory Child 2841.txt', \"King Solomon's Mines 2166.txt\", 'Marie An Episode in The Life of the late Allan Quatermain 1690.txt', 'Benita, an African romance 2761.txt', 'The People of the Mist 6769.txt', \"Hunter Quatermain's Story 2728.txt\", 'Colonel Quaritch, V.C. A Tale of Country Life 11882.txt', 'Nada the Lily 1207.txt', \"Montezuma's Daughter 1848.txt\", \"Maiwa's Revenge 2713.txt\", 'Eric Brighteyes 2721.txt', 'When the World Shook; being an account of the great adventure of Bastin, Bickley and Arbuthnot 1368.txt', 'A Yellow God: an Idol of Africa 2857.txt', 'Finished 1724.txt', 'Pearl-Maiden 5175.txt', \"Wisdom's Daughter (1923) 0200181.txt\", 'The Wizard 2893.txt', 'Allan and the Ice Gods (1927) 0200201.txt', 'The Mahatma and the Hare 2764.txt', 'The Virgin of the Sun 3153.txt', 'Queen of the Dawn (1925) 0200381.txt', \"Queen Sheba's Ring 2602.txt\", 'Beatrice 3096.txt', 'The Ancient Allan 5746.txt', 'Child of Storm 1711.txt', 'Fair Margaret 9780.txt', 'Stories by English Authors: Africa (Selected by Scribners) 1980.txt', 'The Ghost Kings 8184.txt', \"The Witch's Head (1884) 0500791.txt\", 'Regeneration 13434.txt', \"Allan's Wife 2727.txt\", \"Mr. Meeson's Will 11913.txt\", 'The Brethren 2762.txt', 'Cleopatra 2769.txt', 'Love Eternal 3709.txt', 'Stella Fregelius 6051.txt', 'The Tale of Three Lions 2729.txt', 'Allan and the Holy Flower 5174.txt', 'Allan Quatermain 711.txt', 'She 3155.txt', 'Moon of Israel 2856.txt', 'Lysbeth, a Tale of the Dutch 5754.txt', 'She and Allan 5745.txt', 'A Winter Pilgrimage (1901) 0600121.txt', 'The Lady of Blossholme 3813.txt', \"The Wanderer's Necklace 3097.txt\", 'Red Eve 3094.txt', 'Jess 5898.txt', 'Ayesha, the Return of She 5228.txt', 'Swallow: a tale of the great trek 4074.txt', 'Dawn 10892.txt', 'Smith and the Pharaohs, and other Tales 6073.txt', 'Elissa 2855.txt', 'Cetywayo and his White Neighbours Remarks on Recent Events in Zululand, Natal, and the Transvaal 8667.txt', 'Heu-Heu (1924) 0200191.txt'}\n"
      ]
     }
    ],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "id": "c4622dad",
    "metadata": {},
    "outputs": [],
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "id": "b010d186",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "id": "429ee760",
    "metadata": {},
    "outputs": [],
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "id": "b242a65b",
    "metadata": {
     "scrolled": true
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 23,
    "id": "5082eba7",
    "metadata": {},
    "outputs": [],
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 24,
    "id": "4d19def7",
    "metadata": {},
    "outputs": [
@@ -853,8 +853,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Nada the Lily 1207.txt', 'Dawn 10892.txt', 'Stella Fregelius 6051.txt', 'Regeneration 13434.txt', 'Benita, an African romance 2761.txt', 'Lysbeth, a Tale of the Dutch 5754.txt', 'Colonel Quaritch, V.C. A Tale of Country Life 11882.txt', 'Love Eternal 3709.txt', \"Montezuma's Daughter 1848.txt\", 'Marie An Episode in The Life of the late Allan Quatermain 1690.txt']\n",
-      "10\n"
+      "['Nada the Lily 1207.txt', 'Dawn 10892.txt', 'Stella Fregelius 6051.txt', 'Regeneration 13434.txt', 'Benita, an African romance 2761.txt', 'Lysbeth, a Tale of the Dutch 5754.txt', 'Colonel Quaritch, V.C. A Tale of Country Life 11882.txt', 'Love Eternal 3709.txt', \"Montezuma's Daughter 1848.txt\", 'Marie An Episode in The Life of the late Allan Quatermain 1690.txt']\n"
      ]
     }
    ],
@@ -864,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 25,
    "id": "47153be6",
    "metadata": {},
    "outputs": [
@@ -879,14 +878,6 @@
    "source": [
     "print(query_n(inverse_index_counter, [\"eye\", \"father\", \"work\"], score=score_okapi))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d5b80fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
